<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="address_sorter_feature_title">Geo Address Sorter</string>
    <string name="address_sorter_empty_text">No added adresses</string>
    <string name="address_sorter_edit_hint">Input address</string>
    <string name="address_sorter_menu_action_refresh">Refresh</string>
    <string name="address_sorter_menu_action_last_location_info">Last location info</string>
    <string name="address_sorter_menu_action_build_route_app">Build route</string>
    <string name="address_sorter_menu_action_import_from_json">Import from JSON</string>
    <string name="address_sorter_menu_action_export_to_json">Export to JSON</string>
    <string name="address_sorter_menu_action_clear">Clear</string>
    <string name="address_sorter_error_build_route_yandex_navi">\"Yandex Navigator\" app is not installed</string>

    <string name="address_sorter_dialog_address_import_error_message_format">Cannot import addresses: \"%s\"</string>
    <string name="address_sorter_dialog_address_import_error_message">Cannot import addresses</string>
    <string name="address_sorter_dialog_address_export_success_message_format">Addresses exported to %s</string>
    <string name="address_sorter_dialog_address_export_error_message_format">Cannot export addresses: \"%s\"</string>
    <string name="address_sorter_dialog_address_export_error_message">Cannot export addresses</string>
    <string name="address_sorter_dialog_address_export_file_name_title">JSON file name</string>

    <string name="address_sorter_dialog_clear_items_message">Remove all addresses?</string>
    <string name="address_sorter_toast_distance_to_point_format">Distance to point: %s</string>
    <string name="address_sorter_toast_duration_to_point_format">Duration to point: %s</string>
    <string name="address_sorter_toast_your_last_location_format">Your last geo position: %s</string>
    <string name="address_sorter_error_location_format">Error occurred when specifying location: \"%s\"</string>
    <string name="address_sorter_error_location">Unknown error occurred when specifying location</string>
    <string name="address_sorter_error_routing_format">Error occurred when calculating distance/duration: \"%s\"</string>
    <string name="address_sorter_error_routing">Unknown error occurred when calculating distance/duration</string>
    <string name="address_sorter_error_routing_count_format">Error occurred when calculating distance/duration for points: %d</string>
    <string name="address_sorter_error_reverse_geocode_format">Error occurred during reverse geocoding: \"%s\"</string>
    <string name="address_sorter_error_reverse_geocode">Unknown error occurred during reverse geocoding</string>

    <string name="address_sorter_menu_action_change_routing_mode">Distance calculation method</string>
    <string name="address_sorter_menu_action_change_routing_type">Routing type (2GIS)</string>
    <string name="address_sorter_menu_action_change_sort_priority">Sort priority</string>
    <string name="address_sorter_dialog_change_routing_mode_title">@string/address_sorter_menu_action_change_routing_mode</string>
    <string name="address_sorter_dialog_change_routing_type_title">@string/address_sorter_menu_action_change_routing_type</string>
    <string name="address_sorter_dialog_change_sort_priority_title">@string/address_sorter_menu_action_change_sort_priority</string>

    <string name="address_sorter_kilometers_format">%.2f km</string>
    <string name="address_sorter_meters_format">%.2f m</string>

    <string-array name="address_sorter_routing_mode">
        <item>2GIS: Driving</item>
        <item>2GIS: Driving with public transport lanes</item>
        <item>2GIS: Truck</item>
        <item>2GIS: Walking</item>
        <item>2GIS: Bicycle</item>
        <item>Yandex suggest</item>
        <item>Direct (no API)</item>
        <item>No change</item>
    </string-array>

    <string-array name="address_sorter_routing_type">
        <item>Jam</item>
        <item>Shortest</item>
    </string-array>

    <string-array name="address_sorter_sort_priority">
        <item>Distance</item>
        <item>Duration</item>
    </string-array>

    <string name="address_sorter_download_routing_key_failed_format">Error occurred when downloading API key: \"%s\"</string>
    <string name="address_sorter_download_routing_key_failed">Unknown error occurred when downloading API key</string>
</resources>