<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionRefresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/address_sorter_menu_action_refresh"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionChangeRoutingMode"
        android:title="@string/address_sorter_menu_action_change_routing_mode" />
    <item
        android:id="@+id/actionChangeRoutingType"
        android:title="@string/address_sorter_menu_action_change_routing_type" />
    <item
        android:id="@+id/actionChangeSortPriority"
        android:title="@string/address_sorter_menu_action_change_sort_priority" />
    <item
        android:id="@+id/actionPickFromJson"
        android:title="@string/address_sorter_menu_action_pick_from_json" />
    <item
        android:id="@+id/actionClear"
        android:title="@string/address_sorter_menu_action_clear" />
</menu>